--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -2,19 +2,23 @@ name: Faucet Bot
 
 on:
   schedule:
-    - cron: '0 * * * *'  # Every hour
+    - cron: "*/15 * * * *"
   workflow_dispatch:
 
 jobs:
   run-bot:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
-      - name: Install deps
-        run: pip install requests beautifulsoup4
-      - name: Run faucet bot
-        run: python faucet_bot.py
+          python-version: 3.11
+
+      - name: Install requests
+        run: pip install requests
+
+      - name: Run bot
+        run: python main.py
