--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -15,10 +15,11 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: "3.11"
 
       - name: Install requests
         run: pip install requests
 
       - name: Run bot
         run: python main.py
+
